@@ -766,3 +766,4 @@ MySQL and LDAP sources for aliases and virtual addresses for Postfix can now be 
 Current versions are shown in the script updates notification email.
 Errors when extracting cPanel, Plesk and Ensim backup files are reported in more detail.
 Sub-domains in cPanel backups can now be properly imported.
+Virtualin plugins can now export script installers, using the scripts_list function in virtual_feature.pl.
